--- a/app/src/main/res/layout/btn_layout.xml
+++ b/app/src/main/res/layout/btn_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+    android:id="@+id/main_layout"
     android:background="@drawable/rounded_corner"
     android:layout_gravity="center"
     android:weightSum="3"
